force-app/main/default/objects/SIS_Program_Path__c/SIS_Program_Path__c.object-meta.xml
<CustomObject>
    <label>Offre de parcours</label>
    <nameField>
        <label>Nom du parcours</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offres de parcours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>