force-app/main/default/objects/SIS_Program_Path__c/fields/Program_Offering__c.field-meta.xml
<CustomField>
    <fullName>Program_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Offering</label>
    <referenceTo>SIS_Program_Offering__c</referenceTo>
    <relationshipLabel>Program Paths</relationshipLabel>
    <relationshipName>Program_Path</relationshipName>
    <type>Lookup</type>
</CustomField>