force-app/main/default/objects/SIS_Program_Path__c/fields/Program_Plan__c.field-meta.xml
<CustomField>
    <fullName>Program_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Plan</label>
    <referenceTo>hed__Program_Plan__c</referenceTo>
    <relationshipLabel>Program Paths</relationshipLabel>
    <relationshipName>Program_Path</relationshipName>
    <type>Lookup</type>
</CustomField>