force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Academic_Certification__c.field-meta.xml
<CustomField>
    <fullName>SIS_Academic_Certification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Cadre européen de qualification LMD</inlineHelpText>
    <label>Academic Certification</label>
    <referenceTo>hed__Academic_Certification__c</referenceTo>
    <relationshipLabel>Program Paths</relationshipLabel>
    <relationshipName>Program_Paths</relationshipName>
    <type>Lookup</type>
</CustomField>