force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Academic_certification_level__c.field-meta.xml
<CustomField>
    <fullName>SIS_Academic_certification_level__c</fullName>
    <label>Academic certification level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Niveau 6</fullName>
            </value>
            <value>
                <fullName>Niveau 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>