force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Adapted_course__c.field-meta.xml
<CustomField>
    <fullName>SIS_Adapted_course__c</fullName>
    <label>Adapted course</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SHN</fullName>
            </value>
            <value>
                <fullName>Co-operative course</fullName>
            </value>
            <value>
                <fullName>Talent</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>