force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Budget_Unit__c.field-meta.xml
<CustomField>
    <fullName>SIS_Budget_Unit__c</fullName>
    <label>Budget Unit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>