force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Course_list__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_list__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course list</label>
    <referenceTo>hed__Course__c</referenceTo>
    <relationshipLabel>Parcours</relationshipLabel>
    <relationshipName>Parcours</relationshipName>
    <type>Lookup</type>
</CustomField>