force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Date_of_the_review_board__c.field-meta.xml
<CustomField>
    <fullName>SIS_Date_of_the_review_board__c</fullName>
    <label>Date of the review board</label>
    <type>Date</type>
</CustomField>