force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Distribution_of_the_cursus_by_site__c.field-meta.xml
<CustomField>
    <fullName>SIS_Distribution_of_the_cursus_by_site__c</fullName>
    <label>Distribution of the cursus by site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>