force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_ECTS_Number__c.field-meta.xml
<CustomField>
    <fullName>SIS_ECTS_Number__c</fullName>
    <label>ECTS Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>