force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SIS_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>