force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_English__c.field-meta.xml
<CustomField>
    <fullName>SIS_English__c</fullName>
    <defaultValue>false</defaultValue>
    <label>English</label>
    <type>Checkbox</type>
</CustomField>