force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_First_examiner_board_date__c.field-meta.xml
<CustomField>
    <fullName>SIS_First_examiner_board_date__c</fullName>
    <label>First examiner board date</label>
    <type>Date</type>
</CustomField>