force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Format__c.field-meta.xml
<CustomField>
    <fullName>SIS_Format__c</fullName>
    <label>Format</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full-time</fullName>
            </value>
            <value>
                <fullName>Part-time</fullName>
            </value>
            <value>
                <fullName>Co-operative course</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>