force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_French__c.field-meta.xml
<CustomField>
    <fullName>SIS_French__c</fullName>
    <defaultValue>false</defaultValue>
    <label>French</label>
    <type>Checkbox</type>
</CustomField>