force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Lifetime_Member_access_AlumniNetwork__c.field-meta.xml
<CustomField>
    <fullName>SIS_Lifetime_Member_access_AlumniNetwork__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lifetime Member access to alumni network</label>
    <type>Checkbox</type>
</CustomField>