force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Matching_SF_product__c.field-meta.xml
<CustomField>
    <fullName>SIS_Matching_SF_product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matching SF product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Parcours</relationshipLabel>
    <relationshipName>Parcours</relationshipName>
    <type>Lookup</type>
</CustomField>