force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Multimodes__c.field-meta.xml
<CustomField>
    <fullName>SIS_Multimodes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multimodes</label>
    <type>Checkbox</type>
</CustomField>