force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Multimodes_proportions__c.field-meta.xml
<CustomField>
    <fullName>SIS_Multimodes_proportions__c</fullName>
    <label>Multimodes proportions</label>
    <type>Phone</type>
</CustomField>