force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_non_registered_students_type__c.field-meta.xml
<CustomField>
    <fullName>SIS_non_registered_students_type__c</fullName>
    <label>&apos;non-registered&apos; students type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incoming exchange students</fullName>
                <label>Etudiants en échange entrants</label>
            </value>
            <value>
                <fullName>Freemovers</fullName>
                <label>Libre</label>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>VAE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>