force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Normal_time_to_degree__c.field-meta.xml
<CustomField>
    <fullName>SIS_Normal_time_to_degree__c</fullName>
    <label>Normal time to degree</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>