force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Number_of_teaching_hours__c.field-meta.xml
<CustomField>
    <fullName>SIS_Number_of_teaching_hours__c</fullName>
    <label>Number of teaching hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>