force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_On_site__c.field-meta.xml
<CustomField>
    <fullName>SIS_On_site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On site</label>
    <type>Checkbox</type>
</CustomField>