force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_On_site_proportions__c.field-meta.xml
<CustomField>
    <fullName>SIS_On_site_proportions__c</fullName>
    <label>On site proportions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>