force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Online__c.field-meta.xml
<CustomField>
    <fullName>SIS_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online</label>
    <type>Checkbox</type>
</CustomField>