force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Open_to_non_registered_students__c.field-meta.xml
<CustomField>
    <fullName>SIS_Open_to_non_registered_students__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open to non registered students</label>
    <type>Checkbox</type>
</CustomField>