force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Partner_name_school__c.field-meta.xml
<CustomField>
    <fullName>SIS_Partner_name_school__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner name (school)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>University Department</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parcours (Partner name (school))</relationshipLabel>
    <relationshipName>Parcours1</relationshipName>
    <type>Lookup</type>
</CustomField>