force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Partnership__c.field-meta.xml
<CustomField>
    <fullName>SIS_Partnership__c</fullName>
    <label>Partnership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Joint</fullName>
            </value>
            <value>
                <fullName>Triple</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Asian Institute of Technology</fullName>
                <isActive>false</isActive>
                <label>Asian Institute of Technology</label>
            </value>
            <value>
                <fullName>Aston Business School</fullName>
                <isActive>false</isActive>
                <label>Aston Business School</label>
            </value>
            <value>
                <fullName>Centrale Lyon</fullName>
                <isActive>false</isActive>
                <label>Centrale Lyon</label>
            </value>
            <value>
                <fullName>ENS lyon</fullName>
                <isActive>false</isActive>
                <label>ENS lyon</label>
            </value>
            <value>
                <fullName>East China Normal University</fullName>
                <isActive>false</isActive>
                <label>East China Normal University</label>
            </value>
            <value>
                <fullName>Ecole W</fullName>
                <isActive>false</isActive>
                <label>Ecole W</label>
            </value>
            <value>
                <fullName>Escola de Administraçao de Empresas de Sao Paulo, Fundaçao Getulio Vargas, Sao Paulo</fullName>
                <isActive>false</isActive>
                <label>Escola de Administraçao de Empresas de Sao Paulo, Fundaçao Getulio Vargas, Sao Paulo</label>
            </value>
            <value>
                <fullName>Financial University</fullName>
                <isActive>false</isActive>
                <label>Financial University</label>
            </value>
            <value>
                <fullName>HEC Montréal</fullName>
                <isActive>false</isActive>
                <label>HEC Montréal</label>
            </value>
            <value>
                <fullName>Hanken School of Economics</fullName>
                <isActive>false</isActive>
                <label>Hanken School of Economics</label>
            </value>
            <value>
                <fullName>IDA Aix Marseille</fullName>
                <isActive>false</isActive>
                <label>IDA Aix Marseille</label>
            </value>
            <value>
                <fullName>IMT Dubai</fullName>
                <isActive>false</isActive>
                <label>IMT Dubai</label>
            </value>
            <value>
                <fullName>Lancaster University Management School</fullName>
                <isActive>false</isActive>
                <label>Lancaster University Management School</label>
            </value>
            <value>
                <fullName>Ludwig-Maximilians-Universität München</fullName>
                <isActive>false</isActive>
                <label>Ludwig-Maximilians-Universität München</label>
            </value>
            <value>
                <fullName>McGill University</fullName>
                <isActive>false</isActive>
                <label>McGill University</label>
            </value>
            <value>
                <fullName>Mines St Etienne</fullName>
                <isActive>false</isActive>
                <label>Mines St Etienne</label>
            </value>
            <value>
                <fullName>Murray State University</fullName>
                <isActive>false</isActive>
                <label>Murray State University</label>
            </value>
            <value>
                <fullName>National Chengchi University,  College of Commerce</fullName>
                <isActive>false</isActive>
                <label>National Chengchi University,  College of Commerce</label>
            </value>
            <value>
                <fullName>Reutlingen University, ESB Business School</fullName>
                <isActive>false</isActive>
                <label>Reutlingen University, ESB Business School</label>
            </value>
            <value>
                <fullName>Sc. Po Lyon - IEP lyon</fullName>
                <isActive>false</isActive>
                <label>Sc. Po Lyon - IEP lyon</label>
            </value>
            <value>
                <fullName>South China University of Technology, School of Mgt</fullName>
                <isActive>false</isActive>
                <label>South China University of Technology, School of Mgt</label>
            </value>
            <value>
                <fullName>Tongji University, School of Economics and Management</fullName>
                <isActive>false</isActive>
                <label>Tongji University, School of Economics and Management</label>
            </value>
            <value>
                <fullName>Université Jean Moulin Lyon 3</fullName>
                <isActive>false</isActive>
                <label>Université Jean Moulin Lyon 3</label>
            </value>
            <value>
                <fullName>Université Lyon 2</fullName>
                <isActive>false</isActive>
                <label>Université Lyon 2</label>
            </value>
            <value>
                <fullName>Université de St Etienne</fullName>
                <isActive>false</isActive>
                <label>Université de St Etienne</label>
            </value>
            <value>
                <fullName>WHU - Otto Beisheim School of Management</fullName>
                <isActive>false</isActive>
                <label>WHU - Otto Beisheim School of Management</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>