force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Path_responsible_ROP__c.field-meta.xml
<CustomField>
    <fullName>SIS_Path_responsible_ROP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Path responsible ROP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Offres_de_parcours1</relationshipName>
    <type>Lookup</type>
</CustomField>