force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Pricing__c.field-meta.xml
<CustomField>
    <fullName>SIS_Pricing__c</fullName>
    <inlineHelpText>Frais de candidature / Frais d&apos;inscription / Frais de scolarité</inlineHelpText>
    <label>Pricing</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>