force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Program_coordinator__c.field-meta.xml
<CustomField>
    <fullName>SIS_Program_coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program coordinator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Parcours</relationshipLabel>
    <relationshipName>Parcours</relationshipName>
    <type>Lookup</type>
</CustomField>