force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Requirements_list__c.field-meta.xml
<CustomField>
    <fullName>SIS_Requirements_list__c</fullName>
    <label>Requirements list</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>