force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_RNCP_code__c.field-meta.xml
<CustomField>
    <fullName>SIS_RNCP_code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RNCP code</label>
    <referenceTo>SIS_Academic_Certification_Attribute__c</referenceTo>
    <relationshipLabel>Parcours</relationshipLabel>
    <relationshipName>Parcours</relationshipName>
    <type>Lookup</type>
</CustomField>