force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Start_date__c.field-meta.xml
<CustomField>
    <fullName>SIS_Start_date__c</fullName>
    <label>Start date</label>
    <type>Date</type>
</CustomField>