force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Start_location_of_the_academic_year__c.field-meta.xml
<CustomField>
    <fullName>SIS_Start_location_of_the_academic_year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Start location of the academic year</label>
    <referenceTo>SIS_Higher_Education_Institution__c</referenceTo>
    <relationshipLabel>Program Paths</relationshipLabel>
    <relationshipName>Program_Paths</relationshipName>
    <type>Lookup</type>
</CustomField>