force-app/main/default/objects/SIS_Program_Path__c/fields/SIS_Year_of_the_program_path_creation__c.field-meta.xml
<CustomField>
    <fullName>SIS_Year_of_the_program_path_creation__c</fullName>
    <label>Year of the program path creation</label>
    <length>4</length>
    <type>Text</type>
</CustomField>