force-app/main/default/objects/SIS_Program_Path__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SIS_Program__c</columns>
    <columns>Program_Offering__c</columns>
    <columns>SIS_Program_coordinator__c</columns>
    <columns>SIS_Year_of_the_program_path_creation__c</columns>
    <columns>SIS_Start_date__c</columns>
    <columns>SIS_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>